# amp-gsti-unified-intelligence

./: .env.example  .gitignore  Dockerfile.observability  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  database.py  docker-compose.observability.yml  populate_data.py  pyproject.toml  requirements.txt  unified_intelligence_api.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/auth/: auth.py  routes.py
app/models/: __init__.py  candidate.py  market.py  query.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  ASSUMPTIONS_LIMITS.md  SECURITY.md
docs/whitepapers/: Goodwill_GSTI.md  Zero_Knowledge.md
frontend/: Intelligent_Dashboard.html
k8s/: observability-deployment.yaml
models/: market.py  query.py
models/models/: __init__.py
observability_node/: QUICKSTART.md  README.md  SECURITY.md  __init__.py  app.py  metrics.py  run.py  run_integration.py  state_extractors.py  test_integration.py
